# deep-research-agent

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
server/: config.py  main.py  models.py  workflow.py
server/prompts/: __init__.py  extraction_system.txt  extraction_task.txt  filter_system.txt  filter_task.txt  guardrail_system.txt  guardrail_task.txt  rewriter_system.txt  rewriter_task.txt  writer_system.txt  writer_task.txt
server/services/: __init__.py  browser_pool.py  scraper.py  search.py  turnstile.py
server/tasks/: __init__.py  extraction.py  filtering.py  guardrail.py  rewriter.py  writer.py
server/utils/: content_validators.py  logging_config.py  url_filters.py  util.py
web/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  config.ts  index.css  types.ts
web/src/components/: ProgressBar.tsx  ResearchInput.tsx  ResearchResult.tsx  StageIndicator.tsx
web/src/hooks/: useResearchSocket.ts
