[project]
name = "deep-research"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.0",
    "uvicorn>=0.38.0",
    "ddgs>=7.0.0",
    "playwright>=1.49.0",
    "websockets>=14.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "python-dotenv>=1.2.1",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.14.3",
    "structlog>=24.4.0",
]

[dependency-groups]
dev = [
    "ruff",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["server*"]

[project.scripts]
server = "server.main:main"
